[package]
name = "macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
